# freqtrade-strategies

./: .gitignore  Pipfile  analyze_strategies.py  command.sh  docker-compose.yml  filter_strategies.py  pyproject.toml  ruff.toml  temp.py  update.txt
analysis/: ichiV1.json  ichiV1_functions.json  ichiV1_lookahead_bias.json
errors/: BB_RPB_TSL_SMA_Tranz.py  BB_RPB_TSL_SMA_Tranz_TB_MOD.py  ClucHAnix_BB_RPB_MOD_E0V1E_ROI.py  CrossEMAStrategy.py  CryptoFrog.py  CryptoFrogHO.py  CryptoFrogHO2A.py  CryptoFrogHO3A1.py  CryptoFrogHO3A2.py  CryptoFrogHO3A3.py  CryptoFrogHO3A4.py  CryptoFrogNFIHO1A.py  CryptoFrogOffset.py  DevilStra.py  EMABreakout.py  Heracles.py
raws/ADXMomentum/: ADXMomentum.py
raws/ADX_15M_USDT/: ADX_15M_USDT.py
raws/ADX_15M_USDT2/: ADX_15M_USDT2.py
raws/Apollo11/: Apollo11.py
strategies/: AdxSmas.py  BBMod1.py  BBRSI2.py  BBRSI3366.py  BBRSI4cust.py  BBRSIOptimStrategy.py  BBRSIStrategy.py  BBRSIoriginal.py  BB_RPB_TSL.py  BB_RPB_TSL_RNG.py  BB_RPB_TSL_RNG_TBS_GOLD.py  BB_RPB_TSL_RNG_VWAP.py  BB_RPB_TSL_SMA_Tranz_TB_1_1_1.py  BB_RPB_TSL_Tranz.py  BB_RPB_TSL_c7c477d_20211030.py  BB_RPB_TSLmeneguzzo.py  BbRoi.py  BbandRsiRolling.py  BigZ04.py  BigZ0407.py  BigZ07Next.py  BinClucMad.py  BinClucMadDevelop.py  BinClucMadSMADevelop.py  BinHV27.py  BreakEven.py  BuyAllSellAllStrategy.py  BuyOnly.py  CCIStrategy.py  ClucFiatROI.py  ClucFiatSlow.py  ClucHAnix.py  ClucHAnix_5m.py  ClucHAnix_BB_RPB_MOD.py  ClucHAnix_BB_RPB_MOD2_ROI.py  ClucHAnix_hhll.py  CombinedBinHAndCluc2021.py  CombinedBinHAndClucV5.py  CombinedBinHAndClucV7.py  CombinedBinHAndClucV8.py  (+132 more)
(+645 files in other folders)
